Table "crm"."companies" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "organisation_id" uuid [not null]
  "pharow_company_id" varchar(32)
  "siren" varchar(9)
  "hq_siret" varchar(14)
  "name" varchar(255) [not null]
  "brand_name" varchar(255)
  "linkedin_name" varchar(255)
  "naf_sector" varchar(255)
  "activity" text
  "founding_year" int2
  "founding_date" date
  "growing" bool
  "employee_range" varchar(50)
  "annual_revenue_eur" int8
  "annual_revenue_year" int2
  "main_phone" varchar(32)
  "generic_email" public.citext
  "website_url" text
  "linkedin_url" text
  "hq_address" text
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]

  Indexes {
    (organisation_id, pharow_company_id) [type: btree, unique, name: "companies_organisation_id_pharow_company_id_key"]
    (organisation_id, id) [type: btree, unique, name: "ux_companies_org_id"]
    (organisation_id, pharow_company_id) [type: btree, name: "idx_companies_org_pharow"]
    (organisation_id, siren) [type: btree, name: "idx_companies_org_siren"]
  }
}

Table "crm"."people" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "organisation_id" uuid [not null]
  "first_name" varchar(100)
  "last_name" varchar(100)
  "salutation" varchar(50)
  "linkedin_url" text
  "mobile_phone" varchar(32)
  "phone_kaspr_1" varchar(32)
  "phone_kaspr_3" varchar(32)
  "phone_bettercontact" varchar(32)
  "phone_fullenrich_1" varchar(32)
  "phone_fullenrich_3" varchar(32)
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]

  Indexes {
    (organisation_id, first_name, last_name, linkedin_url) [type: btree, unique, name: "people_organisation_id_first_name_last_name_linkedin_url_key"]
    (organisation_id, id) [type: btree, unique, name: "ux_people_org_id"]
    (organisation_id, last_name) [type: btree, name: "idx_people_org_last_name"]
  }
}

Table "crm"."positions" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "organisation_id" uuid [not null]
  "person_id" uuid [not null]
  "company_id" uuid [not null]
  "job_title" varchar(255)
  "pharow_list_name" varchar(255)
  "email" public.citext
  "email_status" varchar(50)
  "email_reliability" numeric(5,2)
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]

  Indexes {
    (organisation_id, company_id, person_id, email) [type: btree, unique, name: "positions_organisation_id_company_id_person_id_email_key"]
    (organisation_id, company_id) [type: btree, name: "idx_positions_org_company"]
    (organisation_id, email) [type: btree, name: "idx_positions_org_email"]
    (organisation_id, person_id) [type: btree, name: "idx_positions_org_person"]
  }
}

Table "iam"."organisations" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "name" text [not null]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

Table "iam"."users" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "email" public.citext [unique, not null]
  "first_name" text
  "last_name" text
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

Table "iam"."organisation_users" {
  "organisation_id" uuid [unique, not null]
  "user_id" uuid [not null]
  "role" text [not null, check: `role = ANY (ARRAY['owner'::text, 'admin'::text, 'member'::text, 'viewer'::text])`]
  "status" text [not null, check: `status = ANY (ARRAY['invited'::text, 'active'::text, 'disabled'::text])`, default: 'active']
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]

  Indexes {
    (organisation_id, user_id) [pk, type: btree, name: "organisation_users_pkey"]
    user_id [type: btree, name: "idx_org_users_user"]
  }
}

Table "flyway_schema_history" {
  "installed_rank" int4 [pk, not null]
  "version" varchar(50)
  "description" varchar(200) [not null]
  "type" varchar(20) [not null]
  "script" varchar(1000) [not null]
  "checksum" int4
  "installed_by" varchar(100) [not null]
  "installed_on" timestamp [not null, default: `now()`]
  "execution_time" int4 [not null]
  "success" bool [not null]

  Indexes {
    success [type: btree, name: "flyway_schema_history_s_idx"]
  }
}

Ref "companies_organisation_id_fkey":"iam"."organisations"."id" < "crm"."companies"."organisation_id" [delete: cascade]

Ref "people_organisation_id_fkey":"iam"."organisations"."id" < "crm"."people"."organisation_id" [delete: cascade]

Ref "fk_positions_company_same_org":"crm"."companies".("id", "organisation_id") < "crm"."positions".("company_id", "organisation_id") [delete: cascade]

Ref "fk_positions_person_same_org":"crm"."people".("id", "organisation_id") < "crm"."positions".("organisation_id", "person_id") [delete: cascade]

Ref "positions_organisation_id_fkey":"iam"."organisations"."id" < "crm"."positions"."organisation_id" [delete: cascade]

Ref "organisation_users_organisation_id_fkey":"iam"."organisations"."id" < "iam"."organisation_users"."organisation_id" [delete: cascade]

Ref "organisation_users_user_id_fkey":"iam"."users"."id" < "iam"."organisation_users"."user_id" [delete: cascade]
